DDP-6476 | add css property for add family member to fix cut off relation text

--- a/src/app/popups/add-family-member/add-family-member.component.css
+++ b/src/app/popups/add-family-member/add-family-member.component.css
@@ -26,3 +26,7 @@
     display: block;
     color:red;
 }
+
+.mat-select {
+    display: block;
+}
